--- a/src/app/page/summary/list/list.component.html
+++ b/src/app/page/summary/list/list.component.html
@@ -14,7 +14,7 @@
       <td>{{item.Country}}</td>
       <td class="text-right">{{item.TotalConfirmed | number}}</td>
       <td class="text-right">{{item.TotalDeaths | number}}</td>
-      <td class="text-right">{{item.NewRecovered | number}}</td>
+      <td class="text-right">{{item.TotalRecovered | number}}</td>
     </tr>
   </tbody>
 </table>
