--- a/src/app/page/summary/list/list.component.html
+++ b/src/app/page/summary/list/list.component.html
@@ -4,8 +4,8 @@
       <th>No.</th>
       <th>Country</th>
       <th>Total Confirmed</th>
-      <th>Number Of Deaths</th>
-      <th>Number Of Recovered</th>
+      <th>Total Deaths</th>
+      <th>Total Recovered</th>
     </tr>
   </thead>
   <tbody>
